Fixed flickering problem (changed Crafty entities from DOM to Canvas).
Clear interval problems solved.

--- a/editor-lite/public/css/magos.css
+++ b/editor-lite/public/css/magos.css
@@ -95,3 +95,7 @@
 	float: left;
 	width: 100%;
 }
+
+#cr-stage canvas {
+	z-index: 10;
+}
